# fedora-updater

./: .gitignore  AGENTS.md  README.md  TODO.md  build-rpm.sh  fedora-updater.spec  me.blq.FedoraUpdater.json  me.blq.FedoraUpdater.json~  meson.build  run.sh  update-script.sh
data/: me.blq.FedoraUpdater.check.service  me.blq.FedoraUpdater.desktop.in  me.blq.FedoraUpdater.gschema.xml  me.blq.FedoraUpdater.metainfo.xml.in  me.blq.FedoraUpdater.policy.in  me.blq.FedoraUpdater.service.in  me.blq.FedoraUpdater.timer  me.blq.FedoraUpdater.upgrade_helper.py  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: dnf_backend.py  fedora-updater.gresource.xml  fedora-updater.in  flatpak_backend.py  main.py  meson.build  mock_backends.py  preferences_window.blp  preferences_window.py  system_upgrade_backend.py  utils.py  window.blp  window.py
src/demo_scenarios/: check_error.json  flatpak_check_error.json  flatpak_upgrade_error.json  no_reboot.json  up_to_date.json  updates_and_upgrade_available.json  updates_available.json  upgrade_available.json  upgrade_error.json
src/gtk/: help-overlay.ui
src/helpers/: system_upgrade_helper.py  upgrade_helper.py
